# interviews

./: README.md  pyproject.toml
apps/: feature.py  simple.json  simple.py
src/etl/: dataset.py  extractors.py
