[project]
name = "interviews"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [
    { include = "etl", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
